Fix cutoff

--- a/index.css
+++ b/index.css
@@ -35,10 +35,10 @@ section {
   }
 }
 
-.content>h1 {
+.content>div>h1 {
   border-bottom: 1px solid white;
 }
 
-.display-3{
+.display-3 {
   font-family: Bangers;
 }
